# Interact-LLM

./: .gitignore  README.md  makefile  pyproject.toml  “有中文prompt的版本”.ipynb  “有中文prompt的版本”_A1,B1,C1.ipynb
configs/: models.toml
configs/prompts/: v1.0.toml  v1.1.toml  v2.0.toml  v3.0.toml  v999.0.toml  v999_new.toml
src/interact_llm/: app.py
src/interact_llm/data_models/: chat.py  languages.py  prompt.py
src/interact_llm/interfaces/: base_hf.py
src/interact_llm/llm/: hf_gemma.py  hf_wrapper.py  mlx_wrapper.py
src/interact_llm/utils/: model_load.py
src/scripts/: detect_english.py  detect_lang.py  simulate.py  simulate.sh
src/scripts/alignment_drift/: README.md  detect_lang.py  simulate.py  simulate.sh
tokens/: README.md
