[project]
name = "interact-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MinaAlmasi" }
]
requires-python = ">=3.12.3"
dependencies = [
    "accelerate>=1.3.0",
    "black>=25.1.0",
    "isort>=6.0.0",
    "mlx-lm>=0.21.4",
    "protobuf>=5.29.3",
    "pydantic>=2.10.6",
    "sentencepiece>=0.2.0",
    "textual>=1.0.0",
    "torch>=2.6.0",
    "transformers>=4.48.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
