[project]
name = "interact_llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MinaAlmasi" }
]
requires-python = ">=3.12.3"
dependencies = [
    "accelerate>=1.3.0",
    "huggingface-hub>=0.28.1",
    "lingua-language-detector>=2.0.2",
    "mlx-lm>=0.21.4",
    "protobuf>=5.29.3",
    "pydantic>=2.10.6",
    "sentencepiece>=0.2.0",
    "textual>=1.0.0",
    "toml>=0.10.2",
    "torch>=2.6.0",
    "transformers>=4.48.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.7",
]

[tool.ruff]
src = ["src"]
lint.select = ["F", "E", "W", "I001"] # F for pyflakes, E + W for pycodestyle errors + warnings, #I001 for isort
